[package]
name = "website"
version = "0.1.0"
authors = ["Grégoire Charvet 黑瓜 <greg+git@geekingfrog.com>"]
edition = "2021"


[dependencies]
axum = { version = "0.6.0-rc.1", features = ["ws"] }
futures = "0.3.24"
hyper = { version = "0.14.18", features = ["full"] }
itertools = "0.10.3"
liquid = "0.26.0"
nom = "7.1.1"
notify = "4.0.17"
parking_lot = "0.12.1"
pulldown-cmark = "0.9.1"
rayon = "1.5.3"
syntect = "5.0.0"
tera = "1.17.0"
thiserror = "1.0.32"
time = "0.3.14"
tokio = { version = "1.18.1", features = ["full"] }
tower = "0.4.12"
tower-http = { version="0.3.4", features = ["trace", "fs"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-tree = "0.2.0"

[[bin]]
name = "geekingfrog"
path = "src/bin/geekingfrog.rs"

[[bin]]
name = "testingfrog"
path = "src/bin/testingfrog.rs"
