name:                geekingfrog
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/geekingfrog#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable geekingfrog
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       servant-server >= 0.4 && < 0.5,
                       servant-blaze >= 0.4 && < 0.5,
                       blaze-markup >= 0.7 && < 0.8,
                       -- aeson >= 0.9 && < 0.10,
                       aeson >= 0.11 && < 0.12,
                       wai >= 3.2 && < 3.3,
                       either >= 4.4 && < 4.5,
                       warp >= 3.2 && < 3.4,
                       text >= 1.2 && < 1.3,
                       blaze-html >= 0.8 && < 0.9,
                       blaze-svg >= 0.3 && < 0.4,
                       bytestring >= 0.10 && < 0.11,
                       time >= 1.5 && < 1.6,
                       datetime >= 0.3 && < 0.4,
                       persistent >= 2.2 && < 2.3,
                       persistent-sqlite >= 2.2 && < 2.3,
                       persistent-template >= 2.1 && < 2.2,
                       transformers >= 0.4 && < 0.5,
                       vector >= 0.11 && < 0.12,
                       monad-logger >= 0.3 && < 0.4
