name:                geekingfrog
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/geekingfrog#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable geekingfrog
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Geekingfrog.APIViews
                     , Geekingfrog.APIViews.Post
                     , Geekingfrog.APIViews.Tag
                     , Geekingfrog.AtomFeed
                     , Geekingfrog.Constants
                     , Geekingfrog.ContentType
                     , Geekingfrog.Db.PostStatus
                     , Geekingfrog.Db.Types
                     , Geekingfrog.HtmlApi
                     , Geekingfrog.JSONApi
                     , Geekingfrog.MarkdownParser
                     , Geekingfrog.Queries
                     , Geekingfrog.Types
                     , Geekingfrog.Urls
                     , Geekingfrog.Views
                     , Geekingfrog.Views.Errors
                     , Geekingfrog.Views.Gpg
                     , Geekingfrog.Views.Index
                     , Geekingfrog.Views.Partials
                     , Geekingfrog.Views.Post
                     , Svglogo

  build-depends:       base >= 4.7 && < 5
                     , unordered-containers == 0.2.*
                     , servant == 0.7.*
                     , servant-server == 0.7.*
                     , servant-blaze == 0.7.*
                     , blaze-markup >= 0.7 && < 0.8
                     , aeson >= 0.11 && < 0.12
                     , wai >= 3.2 && < 3.3
                     , wai-app-static >= 3.1 && < 3.2
                     , http-types >= 0.9 && < 0.10
                     , http-media >= 0.6 && < 0.7
                     , either >= 4.4 && < 4.5
                     , warp >= 3.2 && < 3.4
                     , text >= 1.2 && < 1.3
                     , blaze-html >= 0.8 && < 0.9
                     , blaze-svg >= 0.3 && < 0.4
                     , bytestring >= 0.10 && < 0.11
                     , utf8-string == 1.0.*
                     , time >= 1.5 && < 1.6
                     , datetime >= 0.3 && < 0.4
                     , persistent >= 2.2 && < 2.3
                     , persistent-sqlite >= 2.2 && < 2.3
                     , persistent-template >= 2.1 && < 2.2
                     , esqueleto >= 2.4 && < 2.5
                     , transformers >= 0.4 && < 0.5
                     , vector >= 0.11 && < 0.12
                     , monad-logger >= 0.3 && < 0.4
                     , safe >= 0.3 && < 0.4
                     , xml >= 1.3 && < 1.4
                     , feed == 0.3.*
                     , directory == 1.2.7.*
                     , megaparsec == 5.0.*
                     , semigroups == 0.18.*

executable geekingfrog-import
  hs-source-dirs:      src
  main-is:             Import.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       unordered-containers == 0.2.*,
                       transformers >= 0.4 && < 0.5,
                       monad-logger >= 0.3 && < 0.4,
                       time >= 1.5 && < 1.6,
                       datetime >= 0.3 && < 0.4,
                       text >= 1.2 && < 1.3,
                       bytestring >= 0.10 && < 0.11,
                       persistent >= 2.2 && < 2.3,
                       persistent-sqlite >= 2.2 && < 2.3,
                       persistent-template >= 2.1 && < 2.2,
                       vector >= 0.11 && < 0.12,
                       directory == 1.2.*,
                       aeson >= 0.11 && < 0.12

executable geekingfrog-file-import
  hs-source-dirs:      src
  main-is:             FileImport.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , vector >= 0.11 && < 0.12
                     , aeson >= 0.11 && < 0.12
                     , directory == 1.2.*
                     , time == 1.5.*
                     , datetime == 0.3.*
                     , text == 1.2.*
