name:                geekingfrog
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/geekingfrog#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable geekingfrog
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options: -O2 -fwarn-incomplete-patterns
  other-modules:       Geekingfrog.AtomFeed
                     , Geekingfrog.Constants
                     , Geekingfrog.ContentType
                     , Geekingfrog.HtmlApi
                     , Geekingfrog.MarkdownParser
                     , Geekingfrog.Types
                     , Geekingfrog.Urls
                     , Geekingfrog.Views
                     , Geekingfrog.Views.Errors
                     , Geekingfrog.Views.Gpg
                     , Geekingfrog.Views.Index
                     , Geekingfrog.Views.Partials
                     , Geekingfrog.Views.Post
                     , Svglogo

  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
                     , servant
                     , servant-server
                     , servant-blaze
                     , blaze-markup
                     , wai
                     , wai-app-static
                     , http-types
                     , http-media
                     , warp
                     , text
                     , blaze-html
                     , blaze-svg
                     , utf8-string
                     , datetime
                     , transformers
                     , xml
                     , feed
                     , directory
                     , megaparsec
                     , semigroups
                     , pandoc
                     , skylighting

executable geekingfrog-file-import
  hs-source-dirs:      src
  main-is:             FileImport.hs
  default-language:    Haskell2010
  other-modules:       Geekingfrog.Constants
                     , Geekingfrog.GhostTypes
                     , Geekingfrog.Parse
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , vector
                     , aeson
                     , directory
                     , time
                     , datetime
                     , text
                     , skylighting
